helm_version/nodeport-helm-nc-homelab.yaml
apiVersion: v1
kind: Service
metadata:
  name: nc-homelab-helm-nodeport
  namespace: nextcloud
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: nc-homelab-helm  
    #app: helloworld
  ports:
    - port: 80         # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
      targetPort: 80   # Optional field.
      nodePort: 30080  # Optional field. By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
